--- a/src/App.css
+++ b/src/App.css
@@ -4,4 +4,5 @@
   min-height: 100vh;
   display: flex;
   flex-direction: column;
+  background-image: linear-gradient( to bottom right, #69c0ff 0%, #b7eb8f 100%)
 }
